# DonutTabs

./: .gitattributes  .gitignore  CLAUDE.md  README.md  donut.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: Plano.md  qa-smoke.md  release-process.md
docs/fixtures/: config.example.json
docs/plans/: 01-fundacao.md  02-i18n.md  03-settings-crud.md  04-settings-preferencias.md  05-donut-gestos.md  06-perfis.md  07-perfil-autostart.md  08-drag-and-drop.md  09-menu-contexto-favicons.md  10-items-file-folder.md  11-openwith-per-item.md  12-import-export-config.md  13-busca-rapida.md  14-app-script.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/apps_picker/: cache.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/config/: io.rs  migrate.rs  mod.rs  schema.rs  v1.rs  validate.rs
src-tauri/src/cursor_warp/: mod.rs
src-tauri/src/default_browser/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/donut_window/: mod.rs
src-tauri/src/favicon/: cache.rs  mod.rs
src-tauri/src/launcher/: focus_linux.rs  focus_macos.rs  focus_windows.rs  mod.rs
src-tauri/src/script_history/: mod.rs  state.rs
src-tauri/src/settings_window/: mod.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/updater/: mod.rs  state.rs
src/core/: errors.ts  i18n.ts  ipc.ts  lucideRegistry.ts  theme.ts  themeTokens.ts
src/donut/: Breadcrumb.tsx  CenterCircle.tsx  Donut.tsx  HoverHoldOverlay.tsx  IconRenderer.tsx  OnboardingHint.tsx  PaginationDots.tsx  ProfileSwitcher.tsx  ScriptConfirmModal.tsx  Slice.tsx  SliceContextMenu.tsx  TabSearchOverlay.tsx  donutSize.ts  findTab.ts  geometry.ts  matchesCombo.ts  pageBoundaries.ts  pagination.ts  quickRelease.ts  searchTabs.ts  tabUtils.ts  themeContext.ts  useDonutNavigation.ts  useFavicon.ts  useHoverHold.ts  useHoverHoldToExpand.ts  useHoverToCollapse.ts  useHoverToExpand.ts  useRingStack.ts  useSliceHighlight.ts
src/entry/: donut.tsx  (+1 more)
(+129 files in other folders)
