[package]
name = "tauri-app"
version = "1.0.0"
description = "DonutTabs — radial tab launcher triggered by a global shortcut"
authors = ["Yuri Hemmel <yuri.modolin@helppi.com.br>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ts-rs = { version = "9", features = ["serde-compat", "uuid-impl"] }
mouse_position = "0.1"
url = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
regex = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
# Issue #48 — parser de `.lnk` (Microsoft Shell Link) pra extrair o target
# real do shortcut (caminho do .exe). Sem isto, picker passa o path do .lnk
# pro launcher e algumas apps falham em rotear via ShellExecute.
parselnk = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Bindings tipados pra CoreFoundation (CFString, CFURL). FFI ergonomic pra
# chamar `LSCopyDefaultApplicationURLForURL` (Launch Services), que retorna
# o `.app` bundle padrão pra um esquema de URL. Cobre default browser
# detection real (vs probe baseado em `/Applications/`).
core-foundation = "0.10"
core-foundation-sys = "0.8"

[dev-dependencies]
tempfile = "3"

